--- a/MediaBrowser.WebDashboard/dashboard-ui/itemlist.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemlist.html
@@ -16,7 +16,7 @@
             <div id="items" class="itemsContainer" style="text-align:center;"></div>
         </div>
 
-        <div data-role="panel" class="viewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
             <form>
 
                 <div>
