update metadata editor

--- a/MediaBrowser.WebDashboard/dashboard-ui/channelitems.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channelitems.html
@@ -15,7 +15,7 @@
             <div id="items" class="itemsContainer paddedItemsContainer" style="text-align:center;"></div>
         </div>
 
-        <div data-role="panel" class="viewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
