--- a/MediaBrowser.WebDashboard/dashboard-ui/encodingsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/encodingsettings.html
@@ -23,7 +23,7 @@
                             <label for="selectVideoDecoder">${LabelHardwareVideoDecoder}</label>
                             <select id="selectVideoDecoder" data-mini="true">
                                 <option value="">${OptionAuto}</option>
-                                <option value="qsv">Intel QSV</option>
+                                <option value="qsv">Intel Quick Sync</option>
                             </select>
                             <div class="fieldDescription">${LabelHardwareVideoDecoderHelp}</div>
                         </li>
