--- a/MediaBrowser.WebDashboard/dashboard-ui/music.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/music.html
@@ -68,7 +68,7 @@
                             <div class="selectionCommands" style="display: none;">
                                 <div class="selectionCommandsControlGroup">
                                     <button class="btnAddToPlaylist" data-mini="true" data-icon="plus" data-inline="true" title="${ButtonAddToPlaylist}">${ButtonAddToPlaylist}</button>
-                                    <button class="btnSyncItems" data-mini="true" data-icon="refresh" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
+                                    <button class="btnSyncItems" data-mini="true" data-icon="sync" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
                                 </div>
                             </div>
                         </div>
@@ -85,7 +85,7 @@
                             <div class="selectionCommands" style="display: none;">
                                 <div class="selectionCommandsControlGroup">
                                     <button class="btnAddToPlaylist" data-mini="true" data-icon="plus" data-inline="true" title="${ButtonAddToPlaylist}">${ButtonAddToPlaylist}</button>
-                                    <button class="btnSyncItems" data-mini="true" data-icon="refresh" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
+                                    <button class="btnSyncItems" data-mini="true" data-icon="sync" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
                                 </div>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                             <div class="selectionCommands" style="display: none;">
                                 <div class="selectionCommandsControlGroup">
                                     <button class="btnAddToPlaylist" data-mini="true" data-icon="plus" data-inline="true" title="${ButtonAddToPlaylist}">${ButtonAddToPlaylist}</button>
-                                    <button class="btnSyncItems" data-mini="true" data-icon="refresh" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
+                                    <button class="btnSyncItems" data-mini="true" data-icon="sync" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +126,7 @@
                             <div class="selectionCommands" style="display: none;">
                                 <div class="selectionCommandsControlGroup">
                                     <button class="btnAddToPlaylist" data-mini="true" data-icon="plus" data-inline="true" title="${ButtonAddToPlaylist}">${ButtonAddToPlaylist}</button>
-                                    <button class="btnSyncItems" data-mini="true" data-icon="refresh" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
+                                    <button class="btnSyncItems" data-mini="true" data-icon="sync" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
                                 </div>
                             </div>
                         </div>
@@ -136,7 +136,7 @@
             </neon-animated-pages>
         </div>
 
-        <div data-role="panel" class="viewPanel albumsViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel albumsViewPanel hide" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
@@ -192,7 +192,7 @@
             </div>
         </div>
 
-        <div data-role="panel" class="viewPanel artistsViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel artistsViewPanel hide" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
@@ -227,7 +227,7 @@
             </div>
         </div>
 
-        <div data-role="panel" class="viewPanel albumArtistsViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel albumArtistsViewPanel hide" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
@@ -263,7 +263,7 @@
             </div>
         </div>
 
-        <div data-role="panel" class="viewPanel songsViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel songsViewPanel hide" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
 
