--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesmenu.html
@@ -70,7 +70,7 @@
 
                     <a href="#" class="clearLink lnkSync hide">
                         <paper-icon-item>
-                            <paper-fab class="listAvatar" icon="refresh" style="background-color:#673AB7;" item-icon></paper-fab>
+                            <paper-fab class="listAvatar" icon="sync" style="background-color:#673AB7;" item-icon></paper-fab>
                             <paper-item-body two-line>
                                 <div>${ButtonSyncSettings}</div>
                                 <div secondary>${ButtonSyncSettingsHelp}</div>
