--- a/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/syncactivity.html
@@ -16,7 +16,7 @@
                 </div>
 
                 <div style="text-align:right;margin-top:-10px;">
-                    <button type="button" class="btnSync" data-icon="refresh" data-mini="true" data-inline="true">${ButtonConvertMedia}</button>
+                    <paper-button raised class="btnSync"><iron-icon icon="sync"></iron-icon><span>${ButtonConvertMedia}</span></paper-button>
                     <progress max="100" min="0" style="width:100px;display:none;" class="syncProgress"></progress>
                 </div>
                 <br />
