--- a/MediaBrowser.WebDashboard/dashboard-ui/tvlatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvlatest.html
@@ -22,7 +22,7 @@
                 <div class="homePageSection">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestEpisodes}</h1>
-                        <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
+                        <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                     </div>
                     <div id="latestEpisodes" class="itemsContainer">
                     </div>
