--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -40,7 +40,7 @@
                         <div class="homePageSection">
                             <div>
                                 <h1 class="listHeader nextUpHeader" style="display:inline-block;vertical-align:middle;">${HeaderNextUp}</h1>
-                                <paper-button raised class="submit mini categorySyncButton" data-category="NextUp"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
+                                <paper-button raised class="submit mini categorySyncButton" data-category="NextUp"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                             </div>
                             <div id="nextUpItems" class="itemsContainer">
                             </div>
