--- a/MediaBrowser.WebDashboard/dashboard-ui/itemlist.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemlist.html
@@ -16,49 +16,50 @@
             <div id="items" class="itemsContainer" style="text-align:center;"></div>
         </div>
 
-        <div data-role="panel" class="viewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
-            <form>
+        <div data-role="panel" class="viewPanel hide" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
+            <div class="ui-panel-inner">
+                <form>
 
-                <div>
+                    <div>
 
-                    <h1>
-                        ${HeaderFilters}
-                    </h1>
+                        <h1>
+                            ${HeaderFilters}
+                        </h1>
 
-                    <div class="checkboxContainer">
-                        <input class="chkStandardFilter" type="checkbox" id="chkPlayed" data-filter="IsPlayed" data-role="none">
-                        <label for="chkPlayed">${OptionPlayed}</label>
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkPlayed" data-filter="IsPlayed" data-role="none">
+                            <label for="chkPlayed">${OptionPlayed}</label>
+                        </div>
+
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkUnplayed" data-filter="IsUnPlayed" data-role="none">
+                            <label for="chkUnplayed">${OptionUnplayed}</label>
+                        </div>
+
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkResumable" data-filter="IsResumable" data-role="none">
+                            <label for="chkResumable">${OptionResumable}</label>
+                        </div>
+
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavorite" data-filter="IsFavorite" data-role="none">
+                            <label for="chkIsFavorite">${OptionFavorite}</label>
+                        </div>
+
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkLikes" data-filter="Likes" data-role="none">
+                            <label for="chkLikes">${OptionLikes}</label>
+                        </div>
+
+                        <div class="checkboxContainer">
+                            <input class="chkStandardFilter" type="checkbox" id="chkDislikes" data-filter="Dislikes" data-role="none">
+                            <label for="chkDislikes">${OptionDislikes}</label>
+                        </div>
+
                     </div>
-
-                    <div class="checkboxContainer">
-                        <input class="chkStandardFilter" type="checkbox" id="chkUnplayed" data-filter="IsUnPlayed" data-role="none">
-                        <label for="chkUnplayed">${OptionUnplayed}</label>
-                    </div>
-
-                    <div class="checkboxContainer">
-                        <input class="chkStandardFilter" type="checkbox" id="chkResumable" data-filter="IsResumable" data-role="none">
-                        <label for="chkResumable">${OptionResumable}</label>
-                    </div>
-
-                    <div class="checkboxContainer">
-                        <input class="chkStandardFilter" type="checkbox" id="chkIsFavorite" data-filter="IsFavorite" data-role="none">
-                        <label for="chkIsFavorite">${OptionFavorite}</label>
-                    </div>
-
-                    <div class="checkboxContainer">
-                        <input class="chkStandardFilter" type="checkbox" id="chkLikes" data-filter="Likes" data-role="none">
-                        <label for="chkLikes">${OptionLikes}</label>
-                    </div>
-
-                    <div class="checkboxContainer">
-                        <input class="chkStandardFilter" type="checkbox" id="chkDislikes" data-filter="Dislikes" data-role="none">
-                        <label for="chkDislikes">${OptionDislikes}</label>
-                    </div>
-
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
-
     </div>
 </body>
 </html>
