--- a/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetv.html
@@ -107,7 +107,7 @@
                         <div id="latestRecordings" class="homePageSection hide">
                             <div>
                                 <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestRecordings}</h1>
-                                <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
+                                <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                             </div>
                             <div class="recordingItems itemsContainer"></div>
                             <br />
@@ -133,7 +133,7 @@
             </neon-animated-pages>
         </div>
 
-        <div data-role="panel" class="viewPanel channelViewPanel hide" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+        <div data-role="panel" class="viewPanel channelViewPanel hide" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
             <div class="ui-panel-inner">
                 <form>
                     <div>
