--- a/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
@@ -24,7 +24,7 @@
                 <div class="localSyncStatus hide" style="text-align:right;margin:0 0 1em;">
                     <span style="vertical-align: middle;margin-right:.5em;" class="labelSyncStatus">${LabelSyncStatus}</span>
                     <paper-spinner class="syncSpinner" active style="vertical-align: middle;"></paper-spinner>
-                    <paper-fab class="btnSyncNow bottomFab" icon="refresh" style="position:fixed;right:20px;background-color:#2ad;z-index:10;"></paper-fab>
+                    <paper-fab class="btnSyncNow bottomFab" icon="sync" style="position:fixed;right:20px;background-color:#2ad;z-index:10;"></paper-fab>
                 </div>
                 <div class="syncActivity">
 
