--- a/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
@@ -22,7 +22,7 @@
                 <div id="resumableSection" style="display: none;" class="scopedContent homePageSection">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
-                        <paper-button raised class="submit mini categorySyncButton" data-category="Resume"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
+                        <paper-button raised class="submit mini categorySyncButton" data-category="Resume"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                     </div>
 
                     <div id="resumableItems" class="itemsContainer">
@@ -32,7 +32,7 @@
                 <div class="homePageSection">
                     <div>
                         <h1 class="listHeader nextUpHeader" style="display:inline-block;vertical-align:middle;">${HeaderNextUp}</h1>
-                        <paper-button raised class="submit mini categorySyncButton" data-category="NextUp"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
+                        <paper-button raised class="submit mini categorySyncButton" data-category="NextUp"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                     </div>
                     <div id="nextUpItems" class="itemsContainer">
                     </div>
