--- a/MediaBrowser.WebDashboard/dashboard-ui/movies.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movies.html
@@ -147,35 +147,13 @@
                         <h1>
                             ${HeaderFilters}
                         </h1>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkPlayedMovie" data-filter="IsPlayed" data-role="none">
-                            <label for="chkPlayedMovie">${OptionPlayed}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkUnplayedMovie" data-filter="IsUnPlayed" data-role="none">
-                            <label for="chkUnplayedMovie">${OptionUnplayed}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkResumableMovie" data-filter="IsResumable" data-role="none">
-                            <label for="chkResumableMovie">${OptionResumable}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteMovie" data-filter="IsFavorite" data-role="none">
-                            <label for="chkIsFavoriteMovie">${OptionFavorite}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkLikesMovie" data-filter="Likes" data-role="none">
-                            <label for="chkLikesMovie">${OptionLikes}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkDislikesMovie" data-filter="Dislikes" data-role="none">
-                            <label for="chkDislikesMovie">${OptionDislikes}</label>
+                        <div class="paperCheckboxList">
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsPlayed">${OptionPlayed}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsUnPlayed">${OptionUnplayed}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsResumable">${OptionResumable}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
                         </div>
                     </div>
                     <br />
@@ -256,34 +234,13 @@
                         <h1>
                             ${HeaderFilters}
                         </h1>
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkPlayedTrailer" data-filter="IsPlayed" data-role="none">
-                            <label for="chkPlayedTrailer">${OptionPlayed}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkUnplayedTrailer" data-filter="IsUnPlayed" data-role="none">
-                            <label for="chkUnplayedTrailer">${OptionUnplayed}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkResumableTrailer" data-filter="IsResumable" data-role="none">
-                            <label for="chkResumableTrailer">${OptionResumable}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteTrailer" data-filter="IsFavorite" data-role="none">
-                            <label for="chkIsFavoriteTrailer">${OptionFavorite}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkLikesTrailer" data-filter="Likes" data-role="none">
-                            <label for="chkLikesTrailer">${OptionLikes}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkDislikesTrailer" data-filter="Dislikes" data-role="none">
-                            <label for="chkDislikesTrailer">${OptionDislikes}</label>
+                        <div class="paperCheckboxList">
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsPlayed">${OptionPlayed}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsUnPlayed">${OptionUnplayed}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsResumable">${OptionResumable}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
                         </div>
                     </div>
 
