--- a/MediaBrowser.WebDashboard/dashboard-ui/music.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/music.html
@@ -143,19 +143,10 @@
                     <div>
                         <h1>${HeaderFilters}</h1>
 
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteAlbums" data-filter="IsFavorite" data-role="none">
-                            <label for="chkIsFavoriteAlbums">${OptionFavorite}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkLikesAlbums" data-filter="Likes" data-role="none">
-                            <label for="chkLikesAlbums">${OptionLikes}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkDislikesAlbums" data-filter="Dislikes" data-role="none">
-                            <label for="chkDislikesAlbums">${OptionDislikes}</label>
+                        <div class="paperCheckboxList">
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
                         </div>
                     </div>
                     <br />
@@ -199,19 +190,10 @@
                     <div>
                         <h1>${HeaderFilters}</h1>
 
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteArtist" data-filter="IsFavorite" data-role="none">
-                            <label for="chkIsFavoriteArtist">${OptionFavorite}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkLikesArtist" data-filter="Likes" data-role="none">
-                            <label for="chkLikesArtist">${OptionLikes}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkDislikesArtist" data-filter="Dislikes" data-role="none">
-                            <label for="chkDislikesArtist">${OptionDislikes}</label>
+                        <div class="paperCheckboxList">
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
                         </div>
                     </div>
                     <br />
@@ -234,19 +216,10 @@
                     <div>
                         <h1>${HeaderFilters}</h1>
 
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteAlbumArtist" data-filter="IsFavorite" data-role="none">
-                            <label for="chkIsFavoriteAlbumArtist">${OptionFavorite}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkLikesAlbumArtist" data-filter="Likes" data-role="none">
-                            <label for="chkLikesAlbumArtist">${OptionLikes}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkDislikesAlbumArtist" data-filter="Dislikes" data-role="none">
-                            <label for="chkDislikesAlbumArtist">${OptionDislikes}</label>
+                        <div class="paperCheckboxList">
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
                         </div>
 
                     </div>
@@ -270,29 +243,12 @@
                     <div>
                         <h1>${HeaderFilters}</h1>
 
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkPlayedSongs" data-filter="IsPlayed" data-mini="true" data-role="none">
-                            <label for="chkPlayedSongs">${OptionPlayed}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkUnplayedSongs" data-filter="IsUnPlayed" data-mini="true" data-role="none">
-                            <label for="chkUnplayedSongs">${OptionUnplayed}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavoriteSongs" data-filter="IsFavorite" data-mini="true" data-role="none">
-                            <label for="chkIsFavoriteSongs">${OptionFavorite}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkLikesSongs" data-filter="Likes" data-mini="true" data-role="none">
-                            <label for="chkLikesSongs">${OptionLikes}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkDislikesSongs" data-filter="Dislikes" data-mini="true" data-role="none">
-                            <label for="chkDislikesSongs">${OptionDislikes}</label>
+                        <div class="paperCheckboxList">
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsPlayed">${OptionPlayed}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsUnPlayed">${OptionUnplayed}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
                         </div>
 
                     </div>
