--- a/MediaBrowser.WebDashboard/dashboard-ui/itemlist.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemlist.html
@@ -26,34 +26,13 @@
                             ${HeaderFilters}
                         </h1>
 
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkPlayed" data-filter="IsPlayed" data-role="none">
-                            <label for="chkPlayed">${OptionPlayed}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkUnplayed" data-filter="IsUnPlayed" data-role="none">
-                            <label for="chkUnplayed">${OptionUnplayed}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkResumable" data-filter="IsResumable" data-role="none">
-                            <label for="chkResumable">${OptionResumable}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkIsFavorite" data-filter="IsFavorite" data-role="none">
-                            <label for="chkIsFavorite">${OptionFavorite}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkLikes" data-filter="Likes" data-role="none">
-                            <label for="chkLikes">${OptionLikes}</label>
-                        </div>
-
-                        <div class="checkboxContainer">
-                            <input class="chkStandardFilter" type="checkbox" id="chkDislikes" data-filter="Dislikes" data-role="none">
-                            <label for="chkDislikes">${OptionDislikes}</label>
+                        <div class="paperCheckboxList">
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsPlayed">${OptionPlayed}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsUnPlayed">${OptionUnplayed}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsResumable">${OptionResumable}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
                         </div>
 
                     </div>
