--- a/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
@@ -4,41 +4,298 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="tvRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series" data-require="scripts/tvrecommended,paperbuttonstyle">
+    <div id="tvRecommendedPage" data-role="page" class="page libraryPage backdropPage pageWithAbsoluteTabs" data-backdroptype="series" data-require="jqmpanel,jqmcollapsible,scripts/tvrecommended">
 
-        <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="tvrecommended.html" class="ui-btn-active"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-            <a href="tvlatest.html"><iron-icon icon="new-releases"></iron-icon>${TabLatest}</a>
-            <a href="tvupcoming.html"><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</a>
-            <a href="tvshows.html"><iron-icon icon="live-tv"></iron-icon>${TabShows}</a>
-            <a href="episodes.html" class="tvEpisodesTab"><iron-icon icon="slideshow"></iron-icon>${TabEpisodes}</a>
-            <a href="tvgenres.html"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
-            <a href="tvpeople.html" class="tvPeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
-            <a href="tvstudios.html" class="tvStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabNetworks}</a>
+        <div class="libraryViewNav libraryViewNavWithMinHeight">
+            <paper-tabs hidescrollbuttons noink>
+                <paper-tab><iron-icon icon="info"></iron-icon>${TabSuggestions}</paper-tab>
+                <paper-tab><iron-icon icon="new-releases"></iron-icon>${TabLatest}</paper-tab>
+                <paper-tab><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</paper-tab>
+                <paper-tab><iron-icon icon="live-tv"></iron-icon>${TabShows}</paper-tab>
+                <paper-tab><iron-icon icon="slideshow"></iron-icon>${TabEpisodes}</paper-tab>
+                <paper-tab class="tvEpisodesTab"><iron-icon icon="video-library"></iron-icon>${TabGenres}</paper-tab>
+                <paper-tab class="tvPeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</paper-tab>
+                <paper-tab class="tvStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabNetworks}</paper-tab>
+            </paper-tabs>
+            <div class="legacyTabs scopedLibraryViewNav">
+                <a href="tvrecommended.html">${TabSuggestions}</a>
+                <a href="tvrecommended.html?tab=1"><iron-icon icon="new-releases"></iron-icon>${TabLatest}</a>
+                <a href="tvrecommended.html?tab=2"><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</a>
+                <a href="tvrecommended.html?tab=3"><iron-icon icon="live-tv"></iron-icon>${TabShows}</a>
+                <a href="tvrecommended.html?tab=4" class="tvEpisodesTab"><iron-icon icon="slideshow"></iron-icon>${TabEpisodes}</a>
+                <a href="tvrecommended.html?tab=5"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
+                <a href="tvrecommended.html?tab=6" class="tvPeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
+                <a href="tvrecommended.html?tab=7" class="tvStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabNetworks}</a>
+            </div>
+        </div>
+
+        <div class="ehsContent fullWidth">
+            <neon-animated-pages>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="0">
+                        <div id="resumableSection" style="display: none;" class="scopedContent homePageSection">
+                            <div>
+                                <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
+                                <paper-button raised class="submit mini categorySyncButton" data-category="Resume"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
+                            </div>
+
+                            <div id="resumableItems" class="itemsContainer">
+                            </div>
+                        </div>
+
+                        <div class="homePageSection">
+                            <div>
+                                <h1 class="listHeader nextUpHeader" style="display:inline-block;vertical-align:middle;">${HeaderNextUp}</h1>
+                                <paper-button raised class="submit mini categorySyncButton" data-category="NextUp"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
+                            </div>
+                            <div id="nextUpItems" class="itemsContainer">
+                            </div>
+                        </div>
+                        <p class="noNextUpItems" style="display: none;">${NoNextUpItemsMessage}</p>
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="1">
+                        <div class="homePageSection">
+                            <div>
+                                <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestEpisodes}</h1>
+                                <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
+                            </div>
+                            <div id="latestEpisodes" class="itemsContainer">
+                            </div>
+                        </div>
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="2">
+                        <div id="upcomingItems">
+                        </div>
+                        <div class="noItemsMessage" style="display: none;">
+                            <p>${MessageNothingHere}</p>
+                            <p><a href="metadata.html">${MessagePleaseEnsureInternetMetadata}</a></p>
+                        </div>
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="3">
+                        <div class="alphabetPicker">
+                        </div>
+                        <div class="viewSettings">
+                            <div class="listTopPaging">
+                            </div>
+                        </div>
+                        <div id="items" class="itemsContainer paddedItemsContainer" style="text-align:center;"></div>
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="4">
+                        <div class="viewSettings">
+                            <div class="listTopPaging">
+                            </div>
+                            <div class="selectionCommands" style="display: none;">
+                                <div class="selectionCommandsControlGroup">
+                                    <button class="btnAddToPlaylist" data-mini="true" data-icon="plus" data-inline="true" title="${ButtonAddToPlaylist}">${ButtonAddToPlaylist}</button>
+                                    <button class="btnMergeVersions" data-mini="true" data-icon="recycle" data-inline="true" title="${ButtonGroupVersions}">${ButtonGroupVersions}</button>
+                                    <button class="btnSyncItems" data-mini="true" data-icon="sync" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="items" class="itemsContainer paddedItemsContainer"></div>
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="5">
+                        <div class="viewSettings">
+                            <div class="listTopPaging">
+                            </div>
+                        </div>
+                        <div id="items" class="itemsContainer paddedItemsContainer"></div>
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="6">
+                        <div class="alphabetPicker">
+                        </div>
+                        <div class="viewSettings">
+                            <div class="listTopPaging">
+                            </div>
+                        </div>
+                        <div class="itemsContainer"></div>
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="7">
+                        <div class="viewSettings">
+                            <div class="listTopPaging">
+                            </div>
+                        </div>
+                        <div id="items" class="itemsContainer paddedItemsContainer" style="text-align:center;"></div>
+                    </div>
+                </neon-animatable>
+            </neon-animated-pages>
+        </div>
+
+        <div data-role="panel" class="viewPanel hide seriesViewPanel" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
+            <form>
+
+                <div>
+                    <h1>
+                        ${HeaderFilters}
+                    </h1>
+                    <div class="paperCheckboxList">
+                        <paper-checkbox class="chkStandardFilter" data-filter="IsPlayed">${OptionPlayed}</paper-checkbox>
+                        <paper-checkbox class="chkStandardFilter" data-filter="IsUnPlayed">${OptionUnplayed}</paper-checkbox>
+                        <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
+                        <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
+                        <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
+                    </div>
+                </div>
+
+                <div>
+                    <h1>
+                        ${HeaderStatus}
+                    </h1>
+                    <div class="paperCheckboxList">
+                        <paper-checkbox class="chkStatus" id="chkStatusContinuing" data-filter="Continuing">${OptionContinuing}</paper-checkbox>
+                        <paper-checkbox class="chkStatus" id="chkStatusEnded" data-filter="Ended">${OptionEnded}</paper-checkbox>
+                    </div>
+                </div>
+                <br />
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true">
+                    <h2>${HeaderAirDays}</h2>
+
+                    <div class="paperCheckboxList">
+                        <paper-checkbox class="chkAirDays" id="chkSunday" data-filter="Sunday">${OptionSunday}</paper-checkbox>
+                        <paper-checkbox class="chkAirDays" id="chkMonday" data-filter="Monday">${OptionMonday}</paper-checkbox>
+                        <paper-checkbox class="chkAirDays" id="chkTuesday" data-filter="Tuesday">${OptionTuesday}</paper-checkbox>
+                        <paper-checkbox class="chkAirDays" id="chkWednesday" data-filter="Wednesday">${OptionWednesday}</paper-checkbox>
+                        <paper-checkbox class="chkAirDays" id="chkThursday" data-filter="Thursday">${OptionThursday}</paper-checkbox>
+                        <paper-checkbox class="chkAirDays" id="chkFriday" data-filter="Friday">${OptionFriday}</paper-checkbox>
+                        <paper-checkbox class="chkAirDays" id="chkSaturday" data-filter="Saturday">${OptionSaturday}</paper-checkbox>
+                    </div>
+                </div>
+                <div data-role="collapsible" data-collapsed="true" data-mini="true">
+                    <h2>${HeaderFeatures}</h2>
+
+                    <div class="paperCheckboxList">
+                        <paper-checkbox class="chkFeatureFilter" id="chkTrailer">${OptionHasTrailer}</paper-checkbox>
+                        <paper-checkbox class="chkFeatureFilter" id="chkSpecialFeature">${OptionHasSpecialFeatures}</paper-checkbox>
+                        <paper-checkbox class="chkFeatureFilter" id="chkThemeSong">${OptionHasThemeSong}</paper-checkbox>
+                        <paper-checkbox class="chkFeatureFilter" id="chkThemeVideo">${OptionHasThemeVideo}</paper-checkbox>
+                    </div>
+                </div>
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="genreFilters">
+                    <h2>${HeaderGenres}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="officialRatingFilters">
+                    <h2>${HeaderParentalRatings}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="tagFilters">
+                    <h2>${HeaderTags}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="yearFilters">
+                    <h2>${HeaderYears}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+            </form>
+        </div>
+
+        <div data-role="panel" class="viewPanel episodesViewPanel hide" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
+            <form>
+
+                <div>
+                    <h1>
+                        ${HeaderFilters}
+                    </h1>
+
+                    <div class="paperCheckboxList">
+                        <paper-checkbox class="chkStandardFilter" data-filter="IsPlayed">${OptionPlayed}</paper-checkbox>
+                        <paper-checkbox class="chkStandardFilter" data-filter="IsUnPlayed">${OptionUnplayed}</paper-checkbox>
+                        <paper-checkbox class="chkStandardFilter" data-filter="IsResumable">${OptionResumable}</paper-checkbox>
+                        <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
+                        <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
+                        <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
+
+                        <paper-checkbox id="chkSpecialFeature">${OptionSpecialEpisode}</paper-checkbox>
+                        <paper-checkbox id="chkMissingEpisode">${OptionMissingEpisode}</paper-checkbox>
+                        <paper-checkbox id="chkFutureEpisode">${OptionUnairedEpisode}</paper-checkbox>
+                    </div>
+
+                </div>
+                <div>
+                    <h1>
+                        ${LabelVideoType}
+                    </h1>
+
+                    <div class="paperCheckboxList">
+                        <paper-checkbox class="chkVideoTypeFilter" data-filter="Bluray" id="chkBluray">${OptionBluray}</paper-checkbox>
+                        <paper-checkbox class="chkVideoTypeFilter" data-filter="Dvd" id="chkDvd">${OptionDvd}</paper-checkbox>
+                        <paper-checkbox class="chkVideoTypeFilter" data-filter="Iso" id="chkIso">${OptionIso}</paper-checkbox>
+                        <paper-checkbox class="chkHDFilter" data-filter="IsHD" id="chkHD">${OptionIsHD}</paper-checkbox>
+                        <paper-checkbox class="chkSDFilter" data-filter="IsSD" id="chkSD">${OptionIsSD}</paper-checkbox>
+                    </div>
+                </div>
+
+                <div>
+                    <h1>
+                        ${LabelFeatures}
+                    </h1>
+
+                    <div class="paperCheckboxList">
+                        <paper-checkbox class="chkFeatureFilter" id="chkSubtitle">${OptionHasSubtitles}</paper-checkbox>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div data-role="panel" class="viewPanel peopleViewPanel hide" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
+            <div class="ui-panel-inner">
+                <form>
+
+                    <div>
+                        <h1>
+                            ${HeaderFilters}
+                        </h1>
+                        <div class="paperCheckboxList">
+                            <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
+                            <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
+                        </div>
+                    </div>
+                    <div>
+                        <h1>
+                            ${HeaderPersonTypes}
+                        </h1>
+
+                        <div class="paperCheckboxList">
+                            <paper-checkbox class="chkPersonTypeFilter" data-filter="Actor">${OptionActors}</paper-checkbox>
+                            <paper-checkbox class="chkPersonTypeFilter" data-filter="GuestStar">${OptionGuestStars}</paper-checkbox>
+                            <paper-checkbox class="chkPersonTypeFilter" data-filter="Director">${OptionDirectors}</paper-checkbox>
+                            <paper-checkbox class="chkPersonTypeFilter" data-filter="Producer">${OptionProducers}</paper-checkbox>
+                            <paper-checkbox class="chkPersonTypeFilter" data-filter="Writer">${OptionWriters}</paper-checkbox>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
         <div data-role="content">
-            <div class="ehsContent">
-
-                <div id="resumableSection" style="display: none;" class="scopedContent homePageSection">
-                    <div>
-                        <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
-                        <paper-button raised class="submit mini categorySyncButton" data-category="Resume"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
-                    </div>
-
-                    <div id="resumableItems" class="itemsContainer">
-                    </div>
-                </div>
-
-                <div class="homePageSection">
-                    <div>
-                        <h1 class="listHeader nextUpHeader" style="display:inline-block;vertical-align:middle;">${HeaderNextUp}</h1>
-                        <paper-button raised class="submit mini categorySyncButton" data-category="NextUp"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
-                    </div>
-                    <div id="nextUpItems" class="itemsContainer">
-                    </div>
-                </div>
-                <p class="noNextUpItems" style="display: none;">${NoNextUpItemsMessage}</p>
-            </div>
         </div>
     </div>
 </body>
